tests/errors/erro_de_ortografia.c
#include <stdio.h>
int main(void) {
    pritnf("typo\n"); // misspelled printf
    return 0;
}
